<resources>
    <string name="app_name">SmartShelfUser</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="shopping_list">Shopping List</string>
    <string name="home">Home</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="webclientId">889468200866-fsk7c6ask5gbq8l6ie9lkodcsonorf0o.apps.googleusercontent.com</string>
    <string name="location_permission_needed">Location permission needed to show your area.</string>
    <string name="detecting_location_placeholder">Detecting location...</string>
    <string name="unable_to_detect_location">Could not get current location. Please ensure location is enabled.</string>
    <string name="error_detecting_location">Error detecting location.</string>
    <string name="location_permission_denied">Location permission denied. Cannot show location.</string>
    <string name="no_location_selected_placeholder">No location selected.</string>


    <string name="my_google_map_apikey">AIzaSyAgKSysloY4Lp4HGTlsqHGXOtXQkujy5LM</string>

    <string name="web_client_id">889468200866-fsk7c6ask5gbq8l6ie9lkodcsonorf0o.apps.googleusercontent.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_smartshelf">Welcome to SmartShelf</string>
    <string name="sign_in_or_sign_up_with_email">Sign In or Sign Up with Email</string>
    <string name="or">OR</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="row_list">Row List</string>
    <string name="create_new_row_shopping_list">Create New Row Shopping List</string>
    <string name="list_name_e_g_weekly_groceries">List Name (e.g., Weekly Groceries)</string>
    <string name="select_place_on_map">Select Place on Map</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="purchase_place_e_g_target_local_market">Purchase Place (e.g., Target, Local Market)</string>
    <string name="no_location_selected_place_holder">No Location Selected Place Holder</string>
    <string name="date_time">Date/Time:</string>
    <string name="create_row_list">Create Row List</string>
    <string name="your_shopping_lists">Your Shopping Lists</string>
    <string name="no_row_shopping_lists_yet_create_one_above">No row shopping lists yet. Create one above!</string>

    <string name="unnamed_list">Unnamed List</string>
    <string name="purchase_place_label">Purchase Place:</string>
    <string name="na">N/A</string>
    <string name="created_label">Created:</string>

    <string name="add_items_title">Add Items</string>
    <string name="add_item_to_row_list">Add Item To Row List</string>
    <string name="hint_item_name">Item Name (e.g., Milk)</string>
    <string name="hint_description">Description (optional)</string>
    <string name="category">Category</string>
    <string name="hint_quantity">Quantity (e.g., 2)</string>
    <string name="hint_unit">Unit</string>
    <string name="add_item">Add Item</string>
    <string name="items_in_current_list">Items in Current List</string>
    <string name="no_items_message">No items added yet. Use the form above.</string>
    <string name="my_shopping_lists">My Shopping Lists</string>
    <string name="add_to_inventory">Add to Inventory</string>
    <string name="item_name">Item Name</string>
    <string name="description_qty_category_added_date">Description | Qty | Category | Added Date</string>
    <string name="welcome_user">Welcome, User!</string>
    <string name="detecting_location_permission">Detecting Location Permission</string>
    <string name="icon_shopping_list">Icon Shopping List</string>
    <string name="icon_search_item">Icon Search Item</string>
    <string name="search_item">Search Item</string>
    <string name="icon_categories">Icon Categories</string>
    <string name="inventory">Inventory</string>
    <string name="icon_all_items">Icon All Items</string>
    <string name="all_items">All Items</string>
    <string name="categories">Categories</string>
    <string name="icon_expiring">Icon Expiring</string>
    <string name="expiring_items">Expiring Items</string>
    <string name="icon_trash">Icon Trash</string>
    <string name="trash">Trash</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="or_sign_up_with">Or sign up with</string>
    <string name="sign_up_with_google">Sign Up with Google</string>
    <string name="row_list_name">Row List Name</string>
    <string name="purchase_place_name">Purchase Place Name</string>
    <string name="no_location_selected">No location selected</string>
    <string name="pick_location">Pick Location</string>
    <string name="search_frg">Search FRG</string>
    <string name="you_don_t_have_any_finalized_shopping_lists_yet">You don\'t have any finalized shopping lists yet.</string>
    <string name="category_name">Category Name</string>
    <string name="product_name">Product Name</string>
    <string name="quantity_10_weight_500g">Quantity: 10, Weight: 500g</string>


    <string-array name="item_categories">
        <item>Bathroom</item>
        <item>Kitchen</item>
        <item>Electronics</item>
        <item>Closet</item>
        <item>Dairy Product</item>
        <item>Produce</item>
        <item>Pantry</item>
        <item>Frozen Foods</item>
        <item>Meat &amp; Seafood</item> <!-- Use &amp; for ampersand -->
        <item>Bakery</item>
        <item>Beverages</item>
        <item>Cleaning Supplies</item>
        <item>Household</item>
        <item>Personal Care</item>
        <item>Stationery</item> <!-- Note: Correct spelling is Stationery -->
        <item>Pets</item>
        <item>Baby Items</item>
        <item>Office Supplies</item>
        <item>Garden</item>
        <item>Automotive</item>
        <item>Other</item>
    </string-array>
</resources>